--- a/src/app/ficha/ficha.component.scss
+++ b/src/app/ficha/ficha.component.scss
@@ -7,12 +7,30 @@ h1{
 	font-weight: bold;
 }
 
+h2{
+	color: #4C4C4E;
+	bold: true;
+	font-family: Monaco;
+	text-align: center;
+	font-weight: bold;
+}
+
 label{
 	color: #d96421;
+	font-family: Monaco;
 }
 
 .box{
 	border: 1px solid #FF0022 !important;
-	background-color: #f8f9f9;	
+	background-color: #f8f9f9;
 }
 
+.th{
+	font-family: Monaco;
+	text-align: center;
+}
+
+.td{
+	font-family: Monaco;
+	text-align: center;
+}
